# timesheet-sync

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_daterange.py  timesheetsync.py
