[project]
name = "timesheet-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dateparser==1.2.0",
  "debugpy>=1.8.14",
  "python-dateutil==2.8.1",
  "python-toggl>=1.1.0",
  "pytz==2019.3",
  "requests==2.26.0",
  "tabulate==0.9.0",
  "toggl-python>=0.3.2",
  "TogglPy>=0.1.1",
  "typer>=0.15.3",
]
